# OS_MAI_labs

./: WHATS_GOING_ON_HERE?.md
kp/: server.c  user.c
kp/doc/: отчет_кп.docx
laba1/: 206Б-Свиридов-1.docx  READme.md  child.c  file.txt  parent.c
laba1/doc/: 206Б-Свиридов-1.docx
laba1/src/: child.c  parent.c
laba2/: READme.md
laba2/doc/: отчет_2_лаба.docx
laba2/src/: func.h  main.c
laba3/: READme.md
laba3/doc/: отчет_3_лаба.docx
laba3/src/: child.c  file.txt  parent.c
laba4/: CMakeLists.txt  READme.md  prog1.cpp  prog2.cpp
laba4/doc/: отчет_лаба_4.docx
laba4/lib1/: a.out  lib1.cpp  lib1.h
laba4/lib2/: a.out  lib2.cpp  lib2.h
laba5-7/: serv.c  tree.h  user.c
laba5-7/doc/: отчет_лаба_5-7.docx
laba8/: отчет_лаба_8.docx
